# LeCrunch3

./: .gitignore  .pre-commit-config.yaml  LeCrunch3.py  README.md  cli.py  controlScreen.py  fetchAndProcess.py  fetchAndSaveFast.py  fetchAndSaveSimple.py  measureRate.py  measureRateAndScan.py  measureRateScanAndSave.py  motion.py  pyproject.toml  triggerTimes.py
